Bug 1789956 [Wayland] Don't use move-to-rect offset for non-adjacent popups r=emilio

move-to-rect offset does not work realibly in mutter and can lead to invisible window.
It's used mainly for tooltips so let's skip it for now.

Differential Revision: https://phabricator.services.mozilla.com/D157926